--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: center;
   font-family: var(--font-geist-sans);
-  background-color: var(--background);
+  background:transparent;
 }
 
 .main {
